objects/Log__e.object
<CustomObject>
    <fields>
        <fullName>Log_Message__c</fullName>
        <label>Log Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quiddity__c</fullName>
        <label>Quiddity</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Id__c</fullName>
        <label>Request Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <pluralLabel>Logs</pluralLabel>
</CustomObject>